fixing overflow on body

--- a/src/app.css
+++ b/src/app.css
@@ -7,3 +7,7 @@
 @tailwind components;
 
 @tailwind utilities;
+
+html, body {
+    overflow-x: hidden;
+}
